auth/base/dex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  labels:
    deployment: dex
spec:
  selector:
    matchLabels:
      deployment: dex
  template:
    metadata:
      labels:
        deployment: dex
    spec:
      containers:
        - command:
            - "/usr/local/bin/dex"
            - "serve"
            - "/etc/dex/cfg/config.yaml"
          image: quay.io/dexidp/dex:v2.25.0
          imagePullPolicy: Always
          name: dex
          ports:
            - containerPort: 5556
            - containerPort: 5557
            - containerPort: 5558
          volumeMounts:
            - mountPath: /etc/dex/cfg
              name: config
            - mountPath: /etc/ssl/certs
              name: ssl
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: dex
        - name: ssl
          secret:
            secretName: dex-sa
