auth/base/dex-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dex
spec:
  port:
    targetPort: 5556
  to:
    kind: Service
    name: dex
